// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`editServerEpic actions snapshot on failed response 1`] = `
Array [
  Object {
    "id": "some id",
    "type": "editServer/FORM_DID_SUBMIT",
    "values": Object {
      "name": "name",
      "port": 3000,
    },
  },
  Object {
    "reason": "error message",
    "type": "editServer/DID_FAIL",
  },
]
`;

exports[`editServerEpic actions snapshot on success response 1`] = `
Array [
  Object {
    "id": "some id",
    "type": "editServer/FORM_DID_SUBMIT",
    "values": Object {
      "name": "name",
      "port": 3000,
    },
  },
  Object {
    "result": Object {
      "data": Object {
        "id": "some id",
        "name": "name",
        "port": 3000,
      },
    },
    "type": "editServer/DID_SUCCEED",
  },
]
`;
